TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "138928279734016" [label="Start"];
  "138928279734016" -> "138928279746448";
  "138928279746448" [label="Code"];
  "138928279746448" -> "138928279748176";
  "138928279748176" [label="Function"];
  "138928279748176" -> "138928279743808";
  "138928279748176" -> "138928279747600";
  "138928279748176" -> "138928279747168";
  "138928279743808" [label="main IDENTIFIER"];
  "138928279747600" [label="Parameters"];
  "138928279747168" [label="Code"];
  "138928279747168" -> "138928279745152";
  "138928279747168" -> "138928279732336";
  "138928279747168" -> "138928279744096";
  "138928279745152" [label="Code"];
  "138928279745152" -> "138928279743856";
  "138928279743856" [label="Declaration"];
  "138928279743856" -> "138928279743376";
  "138928279743856" -> "138928279740544";
  "138928279743376" [label="x IDENTIFIER"];
  "138928279740544" [label="1 INT"];
  "138928279732336" [label="Code"];
  "138928279732336" -> "138928279863696";
  "138928279863696" [label="Declaration"];
  "138928279863696" -> "138928279865712";
  "138928279863696" -> "138928279865760";
  "138928279865712" [label="x IDENTIFIER"];
  "138928279865760" [label="2 INT"];
  "138928279744096" [label="Return"];
  "138928279744096" -> "138928279865808";
  "138928279865808" [label="0 INT"];
}
